Fixed a dark mode bug from previous commit

--- a/UI/Web/src/assets/themes/dark.scss
+++ b/UI/Web/src/assets/themes/dark.scss
@@ -19,8 +19,12 @@ $dark-item-accent-bg: #292d32;
       color: $dark-text-color;
   }
 
-  a:not(.btn), .btn-link {
+  a, .btn-link {
     color: #4ac694;
+  }
+
+  a.btn {
+    color: white;
   }
 
 
